--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
        
         <p>
-            Am currently a student of doing bcs, am firm believer in the power of technology to transform lives and societies. She believes that every line of code is an opportunity to make a difference, and she approaches her work with this mindset every day. Jane is committed to using her skills and knowledge to create software solutions that are not only innovative but also ethical and sustainable.
+            Am currently a student doing bcs, am firm believer in the power of technology to transform lives and societies. I believes that every line of code is an opportunity to make a difference, and aprroach my  work with this mindset every day. Am  committed to using my skills and knowledge to create software solutions that are not only innovative but also ethical and sustainable.
             In terms of my goals, I aspires to become a leader in my field. My aim's to use my expertise in Computer Science to drive technological innovation and contribute to the advancement of the tech industry. Am also hoping to inspire and mentor the next generation of tech enthusiasts, sharing my passion for technology and encouraging others to explore the endless possibilities it offers. 
-            Moreover, Jane is deeply committed to promoting diversity and inclusion in the tech industry. She believes that diverse perspectives can lead to more innovative solutions, and she strives to create an environment where everyone feels valued and heard.
+            Moreover, Am deeply committed to promoting diversity and inclusion in the tech industry. My believes that diverse perspectives can lead to more innovative solutions, and I strives to create an environment where everyone feels valued and heard.
           
         </p>
     </div>
